@@ -5,6 +5,8 @@
 	* src/global.c (shortcut_init): Unfold long lines consistently.
 	* src/global.c (shortcut_init): Order the shortcuts in roughly
 	the same manner as in the help lines, and group them per menu.
+	* src/global.c (shortcut_init): Remove the search-mode toggles
+	from the inappropriate WHEREISFILE and REPLACEWITH menus.
 
 2014-04-30  Benno Schulenberg  <bensberg@justemail.net>
 	* src/*, doc/*: Update the years in the copyright notices -- there
